--- a/build.gradle
+++ b/build.gradle
@@ -53,8 +53,13 @@ dependencies {
     //keyclock
     implementation 'org.keycloak:keycloak-admin-client:26.0.4'
 
+    // minIO
+
+        implementation 'io.minio:minio:8.5.7'
+
     // دعم JAX-RS
     implementation 'javax.ws.rs:javax.ws.rs-api:2.1.1'
+
 
 
     implementation 'org.springframework.boot:spring-boot-starter-validation'
