--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,8 +17,8 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
 
   liquibase:
-    enabled: false
-    change-log: classpath:db/changelog/db.changelog-master.yaml
+    enabled: true
+#    change-log: classpath:/db/changelog/changelog-master.yaml
     clear-checksums: true
 
   security:
