--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,8 @@ dependencies {
     // دعم JAX-RS
     implementation 'javax.ws.rs:javax.ws.rs-api:2.1.1'
 
-
+    //swager test
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
 
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
