--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
   liquibase:
     enabled: true
 #    change-log: classpath:/db/changelog/changelog-master.yaml
-    clear-checksums: true
+    clear-checksums: false
 
   security:
     oauth2:
@@ -62,3 +62,7 @@ springdoc:
   swagger-ui:
     enabled: true
     path: /swagger-ui.html
+
+# logging:
+#   level:
+#     root: DEBUG
